# qt6-cmake-deploy-Demo

./: .gitignore  CMakeLists.txt  README.md  main.cpp
